--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="message">
                         <div>
                             <h2>Franciov</h2>
-                            <p>Hello, this is an instant messaging app with a very high attention to the battery status.</p>
+                            <p>Hello, this is an instant messaging app that pays very high attention to battery status.</p>
                         </div>
                     </div>
                 </article>
@@ -61,6 +61,7 @@
 
         <script src="scripts/utils/StringUtils.js"></script>
         <script src="scripts/utils/EnergyManager.js"></script>
+        <!--<script src="scripts/utils/FirefoxOSInstaller.js"></script>-->
         <script src="scripts/controllers/BatteryStatusBarController.js"></script>
         <script src="scripts/controllers/ActionBarController.js"></script>
         <script src="scripts/controllers/ChatViewController.js"></script>
