better code readability

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
                         </div>
                     </div>
                 </article>
+                <!-- <article class="you">
+                    <div class="avatar">
+                        <div class="face"></div>
+                        <div class="body"></div>                            
+                    </div>
+                    <div class="message">
+                        <div>
+                            <h2>Franciov</h2>
+                            <p>Hello :)</p>
+                        </div>
+                    </div>
+                </article> -->
             </section>
 
             <!-- This element is used as anchor for the chat -->
