better code readability

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
             <section id="chat">
                 <article>
-                    <div class="avatar"><img alt="franciov" src="img/franciov.png" /></div>
+                    <div class="avatar">
+                        <img alt="franciov" src="img/franciov.png" />
+                    </div>
                     <div class="message">
                         <div>
                             <h2>Franciov</h2>
