--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="message">
                         <div>
-                            <h2>Franciov</h2>
+                            <h2>You</h2>
                             <p>Hello :)</p>
                         </div>
                     </div>
