Refactoring: used Gaia name convention for js files

--- a/index.html
+++ b/index.html
@@ -110,17 +110,22 @@
             <div id="bottom"></div>
         </div>
 
-        <script src="scripts/utils/StringUtils.js"></script>
-        <script src="scripts/utils/EnergyManager.js"></script>
+        <!-- UTILS -->
+        <script src="scripts/utils/string-utils.js"></script>
+        <script src="scripts/utils/energy-manager.js"></script>
         <script src="scripts/utils/proximity-manager.js"></script>
-        <!--<script src="scripts/utils/FirefoxOSInstaller.js"></script>-->
-        <script src="scripts/controllers/BatteryStatusBarController.js"></script>
-        <script src="scripts/controllers/ActionBarController.js"></script>
-        <script src="scripts/controllers/ChatViewController.js"></script>
+        <!--<script src="scripts/utils/firefoxos-installer.js"></script>-->
+
+        <!-- CONTROLLERS -->
+        <script src="scripts/controllers/battery-status-bar.js"></script>
+        <script src="scripts/controllers/action-bar.js"></script>
+        <script src="scripts/controllers/chat.js"></script>
         <script src="scripts/controllers/call-screen.js"></script>
+
+        <!-- APP -->
         <script src="scripts/app.js"></script>
         <script src="scripts/install.js"></script>
-        <script src="scripts/start.js"></script>
+        <script src="scripts/index.js"></script>
     </body>
 
 </html>
