adjustements for Firefox OS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section id="callscreen">
                 <header>
                     <h1>Francesco Iovine</h1>
-                    <h2>+39 347 5510192</h2>
+                    <h2>+39 347 5510XXX</h2>
                 </header>
                 <article id="callbox">
                     <div id="calling">
